--- a/src/application/Main.fxml
+++ b/src/application/Main.fxml
@@ -1,7 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-	
-<?import javafx.scene.layout.BorderPane?>
-	
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainController">
-	<!-- TODO Add Nodes -->
-</BorderPane>
+
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+
+
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainController">
+   <children>
+      <ImageView fx:id="imgBanner" fitHeight="113.0" fitWidth="600.0" opacity="0.66" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/stockBanner.jpg" />
+         </image>
+      </ImageView>
+      <Label fx:id="lblTitle" alignment="CENTER" layoutY="21.0" prefHeight="39.0" prefWidth="600.0" text="STOCK EXCHANGE">
+         <font>
+            <Font name="Eras Bold ITC" size="48.0" />
+         </font>
+      </Label>
+   </children>
+</Pane>
