--- a/src/application/Main.fxml
+++ b/src/application/Main.fxml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -10,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<TabPane fx:id="tabPaneMain" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="246.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1" fx:controller="application.MainController">
+<TabPane fx:id="tabPaneMain" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="291.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainController">
   <tabs>
     <Tab fx:id="tabMain" text="Principal">
       <content>
@@ -58,31 +59,43 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <ComboBox fx:id="cbxOption" layoutX="22.0" layoutY="55.0" prefHeight="25.0" prefWidth="115.0" />
                   <Label fx:id="lblAction" layoutX="186.0" layoutY="34.0" text="Acción:">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <ComboBox fx:id="cbxAction" layoutX="186.0" layoutY="55.0" prefHeight="25.0" prefWidth="115.0" />
                   <ImageView fitHeight="123.0" fitWidth="154.0" layoutX="446.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../images/stockExchange.png" />
                      </image>
                   </ImageView>
-                  <Label fx:id="lblOptionMsj" layoutX="31.0" layoutY="129.0" text="El precio más alto de la acción">
+                  <Label fx:id="lblOptionMsj" layoutX="31.0" layoutY="174.0" text="El precio más alto de la acción">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
-                  <Label fx:id="lblActionMsj" layoutX="261.0" layoutY="126.0" text="Label" textFill="#3700ff">
+                  <Label fx:id="lblActionMsj" layoutX="261.0" layoutY="171.0" text="Label" textFill="#3700ff">
                      <font>
                         <Font name="System Bold" size="19.0" />
                      </font>
                   </Label>
-                  <Label fx:id="lblPriceMsj" layoutX="149.0" layoutY="160.0" text="Label" textFill="#3700ff">
+                  <Label fx:id="lblPriceMsj" layoutX="149.0" layoutY="205.0" text="Label" textFill="#3700ff">
                      <font>
                         <Font name="System Bold" size="24.0" />
+                     </font>
+                  </Label>
+                  <ChoiceBox fx:id="cbxOption" layoutX="23.0" layoutY="55.0" prefHeight="25.0" prefWidth="117.0" />
+                  <ChoiceBox fx:id="cbxAction" layoutX="185.0" layoutY="55.0" prefHeight="25.0" prefWidth="117.0" />
+                  <DatePicker fx:id="dateBegin" layoutX="25.0" layoutY="120.0" prefHeight="25.0" prefWidth="117.0" />
+                  <Label layoutX="31.0" layoutY="98.0" text="Inicio:">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
+                  <DatePicker fx:id="dateEnd" layoutX="185.0" layoutY="119.0" prefHeight="25.0" prefWidth="117.0" />
+                  <Label layoutX="191.0" layoutY="97.0" text="Fin:">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
                </children></AnchorPane>
